<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/tv_commot"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="4dp">

        <TableRow>

            <RelativeLayout
                android:id="@+id/new_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/img_bt_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:contentDescription="@mipmap/add"
                    android:src="@mipmap/add" />

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_bt_add"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/bt_addper"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/test_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/iv_nextto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@mipmap/nextto"
                    android:src="@mipmap/nextto" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_nextto"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/bt_twoper"
                    android:textSize="16sp" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <RelativeLayout
                android:id="@+id/history_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/img_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:contentDescription="@mipmap/history"
                    android:src="@mipmap/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_history"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/history_data"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/common_probe_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/img_bt_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:contentDescription="@mipmap/probe"
                    android:src="@mipmap/probe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_bt_history"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/bt_ordinary"
                    android:textSize="16sp" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>


    <SlidingDrawer
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/table"
        android:layout_margin="8dp"
        android:content="@id/content"
        android:handle="@id/handle"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/handle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/bg_button_corner"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_live_help_them_24dp" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bg_red_rad8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="一，确保使用的探头已经添加到探头列表中，否则点击「普通探头列表」添加。"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="二，做新孔请点击「新增试验」"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="三，试验中断退出后，可点击「二次测量」继续上次试验"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="四，点击「历史数据」可查看已完成试验的数据。"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>