...
    <string name="tv_check">侧壁系数：</string>

    <string name="tv_check2">侧壁限值：</string>

    <string name="tv_edit">编辑</string>

    <string name="code_scan">二维码扫描</string>

    <string name="tv_auto">手动输入</string>

    <string name="tv_xulie">序列号：</string>

    <string name="tv_id">编号：</string>
...
    <string name="save">保存</string>

    <string name="initial_value">初值</string>

    <string name="general_test">普通试验</string>

    <string name="instrument_calibration">仪器标定</string>

    <string name="me">我</string>

    <string name="wireless_test">无缆试验</string>

    <string name="fs_effective_value">侧壁有效值：</string>
...
