<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_test_24dp"
        android:title="@string/general_test" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_wireless_test_24dp"
        android:title="@string/wireless_test" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_instrument_calibration_24dp"
        android:title="@string/instrument_calibration" />
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/me" />
</menu>
