<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. 代码著作权归卢声波所有。
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="www.jingkan.com.view_model.main.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="www.jingkan.com.activity.MainActivity">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/navigation" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />

    </RelativeLayout>
</layout>